@@ -150,10 +150,7 @@ public class RobotContainer {
                 }
                 autoFireCommand = new AutoFire(indexer, turret, shooter, hood,
                                                 () -> drivetrain.getStateCopy().Speeds,
-                                                () -> drivetrain.getStateCopy().Pose, lookup,
-                                                DriverStation.getAlliance().orElse(Alliance.Blue) == Alliance.Red
-                                                                ? TargetHub.RED_HUB
-                                                                : TargetHub.BLUE_HUB);
+                                                () -> drivetrain.getStateCopy().Pose, lookup);
 
                 if (RobotBase.isSimulation()) {
                         autoFireCommand.setFuelSim(fuelSim);
@@ -182,7 +179,7 @@ public class RobotContainer {
 
 
                 turret.setDefaultCommand(turret.initDefaultCommand(turret));
-                hood.setDefaultCommand(hood.initDefaultCommand(hood));
+                hood.setDefaultCommand(hood.initDefaultCommand());
                 hinge.setDefaultCommand(hinge.initDefaultCommand(hinge));
 
                 // auto chooser
@@ -202,14 +199,13 @@ public class RobotContainer {
                 SmartDashboard.putData("Auto Chooser", autoChooser);
 
                 SmartDashboard.putData("Git Info", new Sendable() {
-                        @SuppressWarnings("removal")
                         @Override
                         public void initSendable(SendableBuilder builder) {
                                 builder.addStringProperty("Branch", () -> BuildConstants.GIT_BRANCH, null);
                                 builder.addStringProperty("Commit", () -> BuildConstants.GIT_SHA, null);
                                 builder.addStringProperty("Date of commit", () -> BuildConstants.GIT_DATE, null);
                                 builder.addStringProperty("Uncommitted changes",
-                                                () -> new Boolean(BuildConstants.DIRTY > 0).toString(),
+                                                () -> Boolean.valueOf(BuildConstants.DIRTY > 0).toString(),
                                                 null);
                         }
                 });
@@ -271,19 +267,19 @@ public class RobotContainer {
 
                 // Run SysId routines when holding back/start and X/Y.
                 // Note that each routine should be run exactly once in a single log.
-                joystick.start().and(joystick.povUp()).whileTrue(drivetrain.sysIdDynamic(Direction.kForward));
-                joystick.start().and(joystick.povDown()).whileTrue(drivetrain.sysIdDynamic(Direction.kReverse));
-                joystick.start().and(joystick.povRight()).whileTrue(drivetrain.sysIdQuasistatic(Direction.kForward));
-                joystick.start().and(joystick.povLeft()).whileTrue(drivetrain.sysIdQuasistatic(Direction.kReverse));
+                // joystick.start().and(joystick.povUp()).whileTrue(drivetrain.sysIdDynamic(Direction.kForward));
+                // joystick.start().and(joystick.povDown()).whileTrue(drivetrain.sysIdDynamic(Direction.kReverse));
+                // joystick.start().and(joystick.povRight()).whileTrue(drivetrain.sysIdQuasistatic(Direction.kForward));
+                // joystick.start().and(joystick.povLeft()).whileTrue(drivetrain.sysIdQuasistatic(Direction.kReverse));
 
                 // reset the field-centric heading on left bumper press
                 joystick.start().onTrue(drivetrain.runOnce(() -> drivetrain.seedFieldCentric()));
                 // joystick.().onTrue(drivetrain.runOnce(() -> drivetrain.seedFieldCentric()));
 
-                // joystick.start().and(joystick.povUp()).whileTrue(shooter.sysIdQuasistatic(SysIdRoutine.Direction.kForward));
-                // joystick.start().and(joystick.povDown()).whileTrue(shooter.sysIdQuasistatic(SysIdRoutine.Direction.kReverse));
-                // joystick.start().and(joystick.povRight()).whileTrue(shooter.sysIdDynamic(SysIdRoutine.Direction.kForward));
-                // joystick.start().and(joystick.povLeft()).whileTrue(shooter.sysIdDynamic(SysIdRoutine.Direction.kReverse));
+                joystick.start().and(joystick.povUp()).whileTrue(shooter.sysIdQuasistatic(SysIdRoutine.Direction.kForward));
+                joystick.start().and(joystick.povDown()).whileTrue(shooter.sysIdQuasistatic(SysIdRoutine.Direction.kReverse));
+                joystick.start().and(joystick.povRight()).whileTrue(shooter.sysIdDynamic(SysIdRoutine.Direction.kForward));
+                joystick.start().and(joystick.povLeft()).whileTrue(shooter.sysIdDynamic(SysIdRoutine.Direction.kReverse));
 
                 // CLIMB button controls
                 // joystick.y().onTrue(climb.climbUp());
@@ -347,7 +343,7 @@ public class RobotContainer {
                                 .onFalse(
                                                 intake.stopRollerCommand());
 
-                joystick.y().whileTrue(AutoAlignCommand.getTrenchCommand(drivetrain));
+                // joystick.y().whileTrue(AutoAlignCommand.getTrenchCommand(drivetrain));
 
                 // HINGE button controls
                 // joystick.povRight()
@@ -359,7 +355,7 @@ public class RobotContainer {
                 // .onFalse(hinge.hingeStopCommand());
 
                 // Indexer button controls
-                joystick.b().onTrue(indexer.toggleIndexer());
+                // joystick.b().onTrue(indexer.toggleIndexer());
                 configureOperatorConsole();
 
                 drivetrain.registerTelemetry(logger::telemeterize);
